# histogram

./: .gitignore  CMakeLists.txt  LICENSE  README.md  histo-header.h  histo.hpp  index.html  params.json
docs/: Doxyfile
docs/html/: _r_e_a_d_m_e_8md_source.html  all__0_8js_source.html  all__1_8js_source.html  all__2_8js_source.html  all__3_8js_source.html  all__4_8js_source.html  all__5_8js_source.html  all__6_8js_source.html  all__7_8js_source.html  all__8_8js_source.html  all__9_8js_source.html  all__a_8js_source.html  all__b_8js_source.html  annotated.html  classes.html  classes__0_8js_source.html  classhisto_1_1histo__error-members.html  classhisto_1_1histo__error.html  conf_8py_source.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_2c0ddc7b8649e476311ca14f4977afbf.html  dir_32152f68578ff548183896333ff15dca.html  dir_368113a2ad281be450bed52e66f13c81.html  dir_656887fb7280eb2384cfeb7ed74e9b43.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a0ce0bafc6ace2f6814a2b706d5c6690.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b66b9ad8e6d1a9ac31a5e7a836f7b585.html  dir_ddc353df6a66183ea8414577a11f8945.html  dir_e438fc6e171a6690f0a9f310c24f9a60.html  doctools_8js_source.html  dynsections_8js_source.html  enums__0_8js_source.html  enumvalues__0_8js_source.html  files.html  files__0_8js_source.html  functions.html  functions__0_8js_source.html  functions__1_8js_source.html  functions__2_8js_source.html  (+63 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_62.html  all_63.html  all_67.html  all_68.html  all_7.js  all_72.html  all_73.html  all_9.js  all_a.js  classes_0.js  classes_68.html  enums_0.js  enums_62.html  enumvalues_0.js  enumvalues_73.html  files_0.js  files_68.html  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_64.html  functions_66.html  functions_68.html  functions_69.html  functions_7.js  functions_72.html  functions_73.html  functions_76.html  functions_8.js  functions_9.js  functions_a.js  groups_0.js  (+13 more)
docs/sphinx/: Makefile  conf.py  index.rst
docs/sphinx/_build/doctrees/: environment.pickle  index.doctree
docs/sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/xml/: _r_e_a_d_m_e_8md.xml  all__0_8js.xml  all__1_8js.xml  all__2_8js.xml  all__3_8js.xml  all__4_8js.xml  all__5_8js.xml  all__6_8js.xml  all__7_8js.xml  all__8_8js.xml  all__9_8js.xml  all__a_8js.xml  all__b_8js.xml  classes__0_8js.xml  classhisto_1_1histo__error.xml  conf_8py.xml  dir_120ed4da3e3217b1e7fc0b4f48568e79.xml  dir_2c0ddc7b8649e476311ca14f4977afbf.xml  dir_32152f68578ff548183896333ff15dca.xml  dir_368113a2ad281be450bed52e66f13c81.xml  dir_4da4b4dfa19e6c33d63e063865b34b23.xml  dir_656887fb7280eb2384cfeb7ed74e9b43.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_a0ce0bafc6ace2f6814a2b706d5c6690.xml  dir_b0856f6b0d80ccb263b2f415c91f9e17.xml  dir_b66b9ad8e6d1a9ac31a5e7a836f7b585.xml  dir_ddc353df6a66183ea8414577a11f8945.xml  dir_e438fc6e171a6690f0a9f310c24f9a60.xml  doctools_8js.xml  dynsections_8js.xml  enums__0_8js.xml  enumvalues__0_8js.xml  files__0_8js.xml  functions__0_8js.xml  functions__1_8js.xml  functions__2_8js.xml  functions__3_8js.xml  functions__4_8js.xml  functions__5_8js.xml  functions__6_8js.xml  (+44 more)
include/: histo.hpp  visualize_histo.hpp
src/: CMakeLists.txt  histo-header-boost.h  histo-header.h  histo.h
src/test/: CMakeLists.txt  test_histo-boost.cpp  test_histo.cpp
stylesheets/: stylesheet.css
test/: CMakeLists.txt  test_histo.cpp  test_visualize_histo.cpp
